# neurox-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  clippy_errors.txt  mnist_brain.nrx  test_interaction.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
cfg/: benchmark.json  cfg.json  chat.json  solve.json
data/: czech_training.json
docs/: cli_reference.md  overview.md
docs/architecture/: system_overview.md
docs/internals/: data_training.md  language_cognition.md  plasticity.md
docs/modules/: cortical_hierarchy.md  mnist_benchmark.md  neuron_models.md  problem_solving.md  spatial_navigation.md  subcortical_systems.md
examples/: advanced_czech_brain.rs  brain_capabilities.rs  connectivity_validation.rs  czech_training_data.txt  gpu_optimization_test.rs  interactive_brain.rs  language_reasoning.rs  mnist_inference.rs  mnist_training.rs  phase2_sparse_network.rs  scale_test_1m.rs
src/: gpu_brain.rs  lib.rs  main.rs  neural_processor.rs
src/affect/: emotional_state.rs
src/attention/: mod.rs  thalamic_routing.rs
src/basal_ganglia/: mod.rs
src/brain/: amygdala.rs  cerebellum.rs  loader.rs  mod.rs  superior_colliculus.rs  thalamus.rs
src/brain/affect/: emotional_state.rs  mod.rs
src/brain/attention/: thalamic_routing.rs
src/brain/basal_ganglia/: mod.rs
src/brain/cognition/: inner_dialogue.rs  self_model.rs  theory_of_mind.rs
src/brain/connectivity/: layered.rs  mod.rs  structural.rs
src/brain/cortex/: barrel_cortex.rs  cochlea.rs  enhanced_predictive.rs  metacognition.rs  mod.rs  mt_mst.rs  predictive_coding.rs  sleep.rs  v1_orientation.rs  working_memory.rs
src/brain/cuda/: cognitive_kernels.rs  cognitive_system.rs  context.rs  kernels.rs  mod.rs  quantization.rs  sparse_kernels.rs  spiking_conv_kernels.rs  stub.rs
src/brain/datasets/: mnist.rs  text_dataset.rs
src/brain/language/: dual_stream.rs  ifg.rs  sequence_generator.rs
src/brain/learning/: etdp.rs  heterosynaptic.rs  metaplasticity.rs  mod.rs  quantization.rs  rstdp.rs  stdp.rs
src/brain/memory/: enhanced_episodic.rs  hippocampus.rs  knowledge_graph.rs  mod.rs
src/cognition/: metacognition.rs  mod.rs  self_model.rs  theory_of_mind.rs
src/commands/: benchmark.rs  chat.rs  info.rs  mod.rs  solve.rs
src/config/: mod.rs
src/connectivity/: mod.rs  structural.rs
src/cortex/: barrel_cortex.rs  cochlea.rs  enhanced_predictive.rs  mod.rs  mt_mst.rs  predictive_coding.rs  sleep.rs  v1_orientation.rs  working_memory.rs
src/cuda/: cognitive_kernels.rs  cognitive_system.rs  context.rs  kernels.rs  mod.rs  motion_kernels.rs  quantization.rs  sparse_kernels.rs  v1_kernels.rs
src/datasets/: mnist.rs  mod.rs  text_dataset.rs
src/language/: dual_stream.rs  ifg.rs  mod.rs  temporal_processing.rs
src/learning/: etdp.rs  heterosynaptic.rs  metaplasticity.rs  mod.rs  quantization.rs  rstdp.rs  stdp.rs
src/memory/: hippocampus.rs  knowledge_graph.rs  mod.rs
src/neuromodulation/: mod.rs
src/neuron/: cadex.rs  dendritic.rs  hierarchical.rs  interneurons.rs  izhikevich.rs  lif.rs  mod.rs
src/oscillations/: mod.rs
src/plugin/: benchmark.rs  chat.rs  info.rs  mod.rs
src/reasoning/: abstract_reasoning.rs  mod.rs
src/semantics/: mod.rs
src/serialization/: mod.rs
src/simulation/: mod.rs
src/solve/: chemistry.rs  math.rs  mod.rs
src/solve/math/: ast.rs  (+1 more)
src/spatial/: mod.rs
src/synapse/: memristive.rs  mod.rs  vesicles.rs
src/training/: mod.rs
tests/: brain_integration.rs  cli_chat.rs  cli_info.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
web/public/: api.json  robots.txt  sitemap.xml
web/scripts/: generate-docs.mjs
web/src/: App.tsx  BrainScene.tsx  index.css  useBrainSimulation.ts
(+39 files in other folders)
