[package]
name = "neurox-ai" 
version = "0.1.0"
edition = "2021"
authors = ["NeuroxAI Team"]
description = "GPU-accelerated neuromorphic computing platform with biologically-inspired spiking neural networks"
repository = "https://github.com/TheRemyyy/neurox-ai"
license = "MIT"
readme = "README.md"
keywords = ["neuromorphic", "spiking-neural-networks", "cuda", "machine-learning", "neuroscience"]
categories = ["science", "simulation", "hardware-support"]

[dependencies]
# GPU acceleration - CUDA 12.6 compatible
cudarc = { version = "0.12", features = ["cuda-12060", "cublas", "curand"] }

# Numerical computing
ndarray = "0.16"
nalgebra = "0.33"

# Sparse matrix operations
sprs = "0.11"

# Parallel processing
rayon = "1.10"
crossbeam = "0.8"
dashmap = "6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# SIMD
wide = "0.7"

# CLI and logging
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"
chrono = "0.4"
rustyline = "14.0"

# Performance monitoring
indicatif = "0.17"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
