[package]
name = "neurox-ai" 
version = "1.0.2"
edition = "2021"
authors = ["TheRemyyy", "Aegis Labs"]
description = "GPU-accelerated neuromorphic computing platform with biologically-inspired spiking neural networks"
repository = "https://github.com/TheRemyyy/neurox-ai"
license = "MIT"
readme = "README.md"
keywords = ["neuromorphic", "spiking-neural-networks", "cuda", "machine-learning", "neuroscience"]
categories = ["science", "simulation", "hardware-support"]

[features]
default = ["cuda"]
# Enable CUDA GPU acceleration (requires NVIDIA GPU + toolkit). Disable for CPU-only build.
cuda = ["dep:cudarc"]

[dependencies]
# GPU acceleration - CUDA 12.6 compatible (optional, see feature "cuda")
cudarc = { version = "0.12", features = ["cuda-12060", "cublas", "curand"], optional = true }

# Numerical computing
ndarray = "0.16"
nalgebra = "0.33"

# Sparse matrix operations
sprs = "0.11"

# Parallel processing
rayon = "1.10"
crossbeam = "0.8"
dashmap = "6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# SIMD
wide = "0.7"

# CLI and logging
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"
chrono = "0.4"
rustyline = "14.0"

# Performance monitoring
indicatif = "0.17"

# HTTP client for MNIST download
ureq = "2.10"
flate2 = "1.0"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
